# Artha-Agent

./: .env  .env.example  AGENTS.md  ARTHA_AI_SYSTEM_OVERVIEW.md  Artha_AI_Backend_IMplementation.md  Artha_AI_Development_Phases_Redesigned.md  Artha_AI_Full_IMplementation.md  DEPLOYMENT.md  DEVELOPER_SETUP_CHECKLIST.md  FI_MCP_SETUP_REFERENCE.md  FI_MONEY_SETUP_GUIDE.md  Gemini_report.md  Gemini_report_updated.md  IMPLEMENTATION_CHECKLIST.md  INTEGRATION_GUIDE.md  PRE_DEPLOYMENT_CHECKLIST.md  QUICK_START.md  README-REAL-DATA.md  README.md  README_FI_MCP_INTEGRATION.md  RENDER_DEPLOYMENT.md  SECURITY.md  SECURITY_SUMMARY.md  SSL_DEPLOYMENT_STRATEGY.md  TEAM_HANDOVER_GUIDE.md  USER_DATA_STORAGE_SUMMARY.md  WINNING_PLAN.md  angel_one_data_flow.md  build.sh  direct_data_investment_app.py  git_reset_output.txt  git_status.txt  git_status_after_reset.txt  render.yaml  requirements.txt  run_interactive.py  run_web_app.py  security_audit.py  security_audit_report.json  simple_investment_cli.py  (+8 more)
.vercel/: project.json
Web-Search-agent/: .env.example  FINAL_USAGE.md  README.md  article_fetcher.py  cli.py  comprehensive_scraper.py  financial_scraper.py  (+4 more)
smart-budget-agent/: README.md  budget_engine.py  budget_summary.py  credentials.json  export_to_csv.py  fetch_receipts.py  gemini_engine.py  gmail_parser.py  main.py  pyproject.toml  quickstart.py  requirements.txt  serviceAccountKey.json  setup.py  smart-budget-agent-2d3e60035f39.json  sms_parser.py  test_budget.py  token.json  transaction_data.csv  utils.py
smart-budget-agent/oauth/: client_secret.json  token.json
(+322 files in other folders)
